# python-project-template

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py  test-requirements.txt
.github/: pull_request_template.md  rename_project.sh  template.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-to-pypi.yml  pull-request-lint.yml
project_name/: main.py
tests/: test_main.py
